# firmware-on-the-edge

./: README.md
firmware-examples/: README.md  build-firmware-container
firmware-examples/example-host-app/: 00-device-names.rules  Cargo.toml
firmware-examples/example-host-app/src/: main.rs
firmware-examples/stm32f103/: README.md
firmware-examples/stm32f103/application/: Cargo.toml  Makefile  README.md  firmware.metainfo.xml  memory.x  stm32f103-example-firmware.spec
firmware-examples/stm32f103/application/.cargo/: config
firmware-examples/stm32f103/application/src/: main.rs
firmware-examples/stm32f103/bootloader/: Cargo.toml  Makefile  README.md  memory.x
firmware-examples/stm32f103/bootloader/src/: main.rs
firmware-examples/stm32f411/: README.md
firmware-examples/stm32f411/application/: .gdbinit  Cargo.toml  Makefile  README.md  firmware.metainfo.xml  memory.x  openocd.cfg  openocd.gdb  stm32f411-example-firmware.spec
firmware-examples/stm32f411/application/examples/: simple_polling.rs
firmware-examples/stm32f411/application/src/: main.rs
firmware-examples/stm32f411/bootloader/: Cargo.toml  Makefile  README.md
firmware-examples/stm32f411/bootloader/.cargo/: config.toml
firmware-examples/stm32f411/bootloader/src/: main.rs
fwupd-auto-update/: Makefile  fwupd-auto-update.service  fwupd-auto-update.spec
image-builder/: build.sh  embedded-firmware-bluerpint.toml  firmware-repo.toml  installer.yaml  kickstart.ks
